# Stylisation

./: .gitignore  CMakeLists.txt  CONTRIBUTING.md  README.md  Stylisation.cpp  demo.cpp  test.cpp
include/: args.h  args.hpp  bilateral.hpp  dog.h  dog.hpp  etf.h  etf.hpp  fbl.h  fbl.hpp  fdog.h  fdog.hpp  gradient.h  gradient.hpp  kuwahara.hpp  quantif.h  quantif.hpp  tensor.h  tensor.hpp  tests.h  tests.hpp  utils.h  utils.hpp  video.hpp
include/args/: args.hpp  fblArgs.hpp  fdogArgs.hpp  kMeanArgs.hpp
lib/lime-master/sources/npr/: lic_detail.h  npr_edges_detail.h  vector_field_detail.h
ressources/classicImageProcessing/: LPE_cell1.pgm  baboon.ppm  lezard.pgm  mer.pgm  ville.pgm
ressources/highDefinitionUnsplash/: credits.txt
src/: bilateral.cpp  dog.cpp  etf.cpp  fbl.cpp  fdog.cpp  gradient.cpp  quantif.cpp  tensor.cpp  test.cpp  tests.cpp  utils.cpp  video.cpp
src/args/: args.cpp  fblArgs.cpp  fdogArgs.cpp  kMeanArgs.cpp
